syntax = "proto3";

option csharp_namespace = "CountwareTraffic.Services.Identity.Grpc";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package user;

service User {
	rpc GetToken(GetTokenRequest) returns (GetTokenResponse){}
}


/*REQUESTS*/
message GetTokenRequest {
    string GrantType = 1;
    string ClientId = 2;
    string ClientSecret = 3;
    string Username = 4;
    string Password = 5;
    string RefreshToken = 6;
}


/*RESPONSES*/
message GetTokenResponse {
    string AccessToken = 1;
    string TokenType = 2;
    int32 ExpiresIn = 3;
    string Scope = 4;
    string RefreshToken = 5;
}




